添加CFD系统配置文件和更新.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,55 @@
-# OpenFOAM files
-0.org/
-constant/polyMesh/
-system/
-VTK/
-*.foam
+# 忽略所有文件和文件夹
+*
 
-# CFDEM files
-DEM/post/
-packing_cfdem/CFD/-p/
-packing_cfdem/CFD/0/
-packing_cfdem/CFD/constant/polyMesh/
-packing_cfdem/CFD/system/
-
-# CFD result files - ignore all time folders except 0/
-CFD/processor*/[0-9]*/
-CFD/processor*/[0-9]*.[0-9]*/
-CFD/processor*/[0-9]*.[0-9]*.[0-9]*/
-CFD/processor*/constant/polyMesh/
-
-# VTK files
-*.vtk
-VTK/
-
-# Post processing folders
-post/
-DEM/post/
-packing_cfdem/post/
-
-# Temporary files
-*.tmp
-*.temp
-*~
-
-# Log files
-*.log
-
-# Backup files
-*.backup
-
-# Compiled files
-*.o
-*.so
-*.a
+# 只保留以下实际存在的文件和文件夹
+!Allclean.sh
+!Allrun.sh
+!blender/
+!blender/挡板.py
+!blender/漏斗带顶盖.py
+!blender/漏斗.py
+!blender/圆柱筒带顶底.py
+!blender/圆柱筒.py
+!blender/packing.blend
+!CFD/
+!CFD/0.org/
+!CFD/0.org/alpha.air
+!CFD/0.org/alphas
+!CFD/0.org/alpha.water
+!CFD/0.org/epsilon
+!CFD/0.org/k
+!CFD/0.org/Ksl
+!CFD/0.org/nut
+!CFD/0.org/p_rgh
+!CFD/0.org/sSmoothField
+!CFD/0.org/U
+!CFD/0.org/Us
+!CFD/0.org/voidfraction
+!CFD/0.org/vSmoothField
+!CFD/constant/
+!CFD/constant/couplingProperties
+!CFD/constant/g
+!CFD/constant/liggghtsCommands
+!CFD/constant/transportProperties
+!CFD/constant/transportProperties_temp
+!CFD/constant/turbulenceProperties
+!CFD/system/
+!CFD/system/blockMeshDict
+!CFD/system/controlDict
+!CFD/system/decomposeParDict
+!CFD/system/fvSchemes
+!CFD/system/fvSolution
+!CFD/system/sampleDict
+!CFD/system/setFieldsDict
+!DEM/
+!DEM/in.liggghts_init
+!DEM/in.liggghts_run
+!DEM/post/
+!DEM/post/.gitignore
+!DEM/Silo.stl
+!.gitignore
+!parCFDDEMrun.sh
+!parDEMrun.sh
+!postrun.sh
+!prerun.sh
+!run.config
