更新项目结构和.gitignore文件
- 更新.gitignore文件以匹配当前项目结构
- 添加缺失的文件到版本控制（README.md, monitor_balance.sh, 项目改进说明.md等）
- 清理旧的packing_cfdem目录结构
- 重新组织文件到正确的目录位置

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # 明确指定要同步的文件（白名单）
 !Allclean.sh
 !Allrun.sh
+!monitor_balance.sh
+!README.md
+!项目改进说明.md
 
 # Blender文件
 !blender/
@@ -51,13 +54,17 @@
 !DEM/
 !DEM/in.liggghts_init
 !DEM/in.liggghts_run
-!DEM/post/
-!DEM/post/.gitignore
+!DEM/in.liggghts_run.backup
+!DEM/Lid.stl
 !DEM/Silo.stl
+!DEM/monitor/
+!DEM/post/
+!DEM/post/restart/
 
 # 其他配置文件
 !.gitignore
 !parCFDDEMrun.sh
+!parCFDDEMrun.sh.backup
 !parDEMrun.sh
 !postrun.sh
 !prerun.sh
